force-app/main/default/objects/Change_Request_Related_Cost__c/Change_Request_Related_Cost__c.object-meta.xml
<CustomObject>
    <label>Change Request Related Cost</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Change Request Related Cost Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Change Request Related Costs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>