force-app/main/default/objects/Change_Request_Related_Cost__c/fields/Amortizable_Depreciable__c.field-meta.xml
<CustomField>
    <fullName>Amortizable_Depreciable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amortizable/Depreciable</label>
    <type>Checkbox</type>
</CustomField>