force-app/main/default/objects/Change_Request_Related_Cost__c/fields/Amortization_Depreciation_Months__c.field-meta.xml
<CustomField>
    <fullName>Amortization_Depreciation_Months__c</fullName>
    <label>Amortization/Depreciation Months</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>