force-app/main/default/objects/Change_Request_Related_Cost__c/fields/Annual_Recurring_Hours_Spent__c.field-meta.xml
<CustomField>
    <fullName>Annual_Recurring_Hours_Spent__c</fullName>
    <formula>IF( ISPICKVAL(Frequency__c,&quot;One-Time&quot;), 0,
IF( ISPICKVAL(Frequency__c,&quot;Annual&quot;), Hours_Spent__c,
IF( ISPICKVAL(Frequency__c,&quot;Biannual&quot;), Hours_Spent__c * 2 ,
IF( ISPICKVAL(Frequency__c,&quot;Quarterly&quot;), Hours_Spent__c* 4 ,
IF( ISPICKVAL(Frequency__c,&quot;Monthly&quot;), Hours_Spent__c* 12,
IF( ISPICKVAL(Frequency__c,&quot;Weekly&quot;), Hours_Spent__c * 52, 0))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Recurring Hours Spent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>