force-app/main/default/objects/Change_Request_Related_Cost__c/fields/Annual_Recurring_Labor_Cost__c.field-meta.xml
<CustomField>
    <fullName>Annual_Recurring_Labor_Cost__c</fullName>
    <formula>IF( ISPICKVAL(Frequency__c,&quot;One-Time&quot;), 0,
IF( ISPICKVAL(Frequency__c,&quot;Annual&quot;), Labor_Cost__c ,
IF( ISPICKVAL(Frequency__c,&quot;Biannual&quot;), Labor_Cost__c * 2 ,
IF( ISPICKVAL(Frequency__c,&quot;Quarterly&quot;), Labor_Cost__c* 4 ,
IF( ISPICKVAL(Frequency__c,&quot;Monthly&quot;), Labor_Cost__c * 12,
IF( ISPICKVAL(Frequency__c,&quot;Weekly&quot;), Labor_Cost__c * 52, 0))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Recurring Labor Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>