force-app/main/default/objects/Change_Request_Related_Cost__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Implementation Cost</fullName>
            </value>
            <value>
                <fullName>One-Time Future Cost</fullName>
            </value>
            <value>
                <fullName>Recurring Cost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>