force-app/main/default/objects/Change_Request_Related_Cost__c/fields/Change_Request__c.field-meta.xml
<CustomField>
    <fullName>Change_Request__c</fullName>
    <label>Change Request</label>
    <referenceTo>ChangeRequest</referenceTo>
    <relationshipLabel>Change Request Related Costs</relationshipLabel>
    <relationshipName>Change_Request_Related_Costs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>