force-app/main/default/objects/Change_Request_Related_Cost__c/fields/Employee_Level__c.field-meta.xml
<CustomField>
    <fullName>Employee_Level__c</fullName>
    <label>Employee Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Entry-Level</fullName>
            </value>
            <value>
                <fullName>Mid-Level</fullName>
            </value>
            <value>
                <fullName>Senior</fullName>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>