force-app/main/default/objects/Change_Request_Related_Cost__c/fields/Hard_Cost__c.field-meta.xml
<CustomField>
    <fullName>Hard_Cost__c</fullName>
    <label>Hard Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>