force-app/main/default/objects/Change_Request_Related_Cost__c/fields/Hours_Spent__c.field-meta.xml
<CustomField>
    <fullName>Hours_Spent__c</fullName>
    <label>Hours Spent</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>