force-app/main/default/objects/Change_Request_Related_Cost__c/fields/Labor_Cost__c.field-meta.xml
<CustomField>
    <fullName>Labor_Cost__c</fullName>
    <formula>Hourly_Cost__c *  Number_of_Employees__c  *  Hours_Spent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Labor Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>