force-app/main/default/objects/Change_Request_Related_Cost__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <label>Sequence</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>