force-app/main/default/objects/Change_Request_Related_Cost__c/fields/Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Subcategory__c</fullName>
    <label>Subcategory</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vendor Fee</fullName>
            </value>
            <value>
                <fullName>Third-Party Contract</fullName>
            </value>
            <value>
                <fullName>Bank Direct Labor</fullName>
            </value>
            <value>
                <fullName>Bank Overhead</fullName>
            </value>
            <value>
                <fullName>External Due Diligence</fullName>
            </value>
            <value>
                <fullName>Software Licensing</fullName>
            </value>
            <value>
                <fullName>Maintenance Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>