force-app/main/default/objects/Change_Request_Related_Cost__c/fields/Supporting_Department__c.field-meta.xml
<CustomField>
    <fullName>Supporting_Department__c</fullName>
    <label>Supporting Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Bank_Departments</valueSetName>
    </valueSet>
</CustomField>