force-app/main/default/objects/Change_Request_Related_Cost__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <formula>IF( OR(ISPICKVAL(Category__c, &quot;Direct Implementation Cost&quot;),ISPICKVAL(Category__c, &quot;One-Time Future Cost&quot;)), Hard_Cost__c + Labor_Cost__c,
IF( ISPICKVAL(Category__c,&quot;Recurring Cost&quot;), Annual_Recurring_Hard_Cost__c + Annual_Recurring_Labor_Cost__c, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>